# WiFi_Locator

./: .gitignore  CMakeLists.txt  README.md  command.txt
docroot/: dom.txt  index.html  resp.php
include/: wifi_search.h
src/: server.c  ssid_json.c  wifi_search.c
